# cbenchio

./: .gitlab-ci.yaml  .gitlab-ci.yml  IO.md  Readme.md  posix_write_per_process.cpp  submit.sh
cbenchio/: CMakeLists.txt  Readme.md  config.yaml  tools.cmake
cbenchio/cmakeModules/: FindNetCDF.cmake
cbenchio/eigen/: CMakeLists.txt
cbenchio/regression_tests/base/: cbenchio.py
cbenchio/regression_tests/hdf5/: hdf5.py
cbenchio/regression_tests/hdf5/chunked/: hdf5.py
cbenchio/regression_tests/hdf5/chunked/src/: hdf5_chunking.yaml
cbenchio/regression_tests/hdf5/simple/: hdf5.py
cbenchio/regression_tests/hdf5/simple/src/: hdf5Random.yaml
cbenchio/regression_tests/hdf5/src/: hdf5.yaml
cbenchio/regression_tests/mpiio/: mpiio.py
cbenchio/regression_tests/mpiio/src/: mpiio.yaml  mpiioPools.yaml
cbenchio/regression_tests/netcdf/: netcdf.py
cbenchio/regression_tests/netcdf/chunked/: netcdf.py
cbenchio/regression_tests/netcdf/chunked/src/: netcdf.yaml
cbenchio/regression_tests/netcdf/simple/src/: netcdf.yaml
cbenchio/regression_tests/netcdf/time_stepping/: netcdf.py
cbenchio/regression_tests/netcdf/time_stepping/src/: netcdf.yaml
cbenchio/regression_tests/platform/: cirrus-ex.py
cbenchio/regression_tests/posix/: posix.py
cbenchio/regression_tests/posix/src/: posixDirect.yaml  posixLockAhead.yaml
cbenchio/src/: CMakeLists.txt  benchioArray.cpp  benchioArray.h  benchmarks.cpp  benchmarks.h  ctl_io.h  data.cpp  data.h  dataGenerator.cpp  dataGenerator.h  definitions.h  hdf5_io.cpp  hdf5_io.h  main.cpp  mpi_io.cpp  mpi_io.h  netcdf_io.cpp  netcdf_io.h  pool.cpp  pool.h  posix_io.cpp  posix_io.h  std_io.cpp  std_io.h  test_posix_io.cpp  timers.cpp  timers.h  tools.h
cbenchio/test/: CMakeLists.txt  test_benchio_array.cpp  test_benchio_array_aligned.cpp  test_distributedCartesianArray.cpp  test_hdf5.cpp  test_mpiio.cpp  test_mpiio_8x8.cpp  test_netcdf.cpp  test_pool.cpp  test_posix_io.cpp  test_std_io.cpp  tools.h
examples/: Readme.md  posix.yaml  posixStrided.yaml
examples/lammps/: Readme.md  generate_initial_conditions.py  many_particles.lam  submit.sh  submit_archer2.sh
examples/mpio/: Readme.md  config-serial.yaml  config.yaml  submit.sh
examples/mpio-scorep/: Readme.md  submit.sh
install_darshan/: Readme.md  env.sh
scripts/: Readme.md  build_archer2_cbenchio.sh  build_darshan_archer2.sh  run_reframe_tests_cirrus.sh  settings_archer2.sh  submit_test_archer2.sh
scripts/lammps/: build_lammps_archer2.sh
